fix: spacers should be visible in untracked region
woops

--- a/src/css/betterbuffsbar.css
+++ b/src/css/betterbuffsbar.css
@@ -174,6 +174,10 @@ html:not(.beta) .beta-only {
   background-color: transparent !important;
 }
 
+#UntrackedBuffs .spacer {
+  background-color: #3e3e3e !important;
+}
+
 .tracked-region:hover .spacer {
   background-color: red !important;
 }
